Fixed overflow for thumbnails

--- a/static/css/ogp-style.less
+++ b/static/css/ogp-style.less
@@ -861,6 +861,7 @@ h4.zone-label {
     margin-bottom: 24px;
     cursor: pointer;
     position: relative;
+    overflow: hidden;
 
     button.close {
         position: absolute;
